Increase top amount for mobile growl alerts to ensure it doesnt overlap with search button

--- a/src/styles/components/growl-alerts.less
+++ b/src/styles/components/growl-alerts.less
@@ -44,7 +44,7 @@
       .viewport-mobile & {
         left:auto;
         right:10px;
-        top:10px;
+        top:60px;
       }
     }
     &.right-center {
